--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -4,13 +4,14 @@
 <div class="wrapper sticky">
   <nav class="navbar-fixed-top">
     <a href="#" class="logo">
-      <mat-icon>storefront</mat-icon> Cafe Management System
+      <mat-icon>storefront</mat-icon>CollegeU
     </a>
     <ul>
       <li><a (click)="signupAction()">Signup</a></li>
+      <li><a (click)="forgotPasswordAction()">Forgot Password?</a></li>
     </ul>
   </nav>
 </div>
 <div class="footer" id="signup">
-  <h2>All right reserved @BTech Days</h2>
+  <h2>All right By CollegU</h2>
 </div>
