--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -7,6 +7,7 @@
       <mat-icon>storefront</mat-icon>CollegeU
     </a>
     <ul>
+      <li><a (click)="loginAction()">Login</a></li>
       <li><a (click)="signupAction()">Signup</a></li>
       <li><a (click)="forgotPasswordAction()">Forgot Password?</a></li>
     </ul>
