--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="accent">
     <mat-toolbar-row fxLayout="row">
         <span class="title-center">Signup</span>
     </mat-toolbar-row>
@@ -51,5 +51,5 @@
 <mat-dialog-actions align="center">
     <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()"
     [disabled]="!(signupForm.valid && signupForm.dirty)">Sign Up</button>
-    <button mat-raised-button color="primary" mat-dialog-close>Close</button>
+    <button mat-raised-button color="accent" mat-dialog-close>Close</button>
 </mat-dialog-actions>
