--- a/frontend/src/app/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar colors="primary">
+<mat-toolbar color="accent">
     <mat-toolbar-row fxLayout="row">
         <span class="title-center">Forgot Password</span>
     </mat-toolbar-row>
@@ -22,5 +22,5 @@
 <mat-dialog-actions align="center">
     <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()"
     [disabled]="!(forgotPasswordForm.valid && forgotPasswordForm.dirty)">Send Password</button>
-    <button mat-raised-button color="primary" mat-dialog-close>Close</button>
+    <button mat-raised-button color="accent" mat-dialog-close>Close</button>
 </mat-dialog-actions>
