--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -1,254 +1,254 @@
+/* UTILITIES */
 * {
-  box-sizing: border-box;
-}
-
-/* Style the body */
-body {
-  font-family: Arial;
   margin: 0;
-}
-
-/* Header/logo Title */
-.header {
-  padding: 60px;
-  text-align: center;
-  background: #1abc9c;
-  color: white;
-}
-
-/* Style the top navigation bar */
-.navbar {
-  display: flex;
-  background-color: #333;
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  color: white;
-  padding: 14px 20px;
-  text-decoration: none;
-  text-align: center;
-}
-
-/* Change color on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Column container */
-.row {  
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
-
-/* Main column */
-.main {
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 6px;
-  text-align: center;
-  color: white;
-  background: #e53935;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row, .navbar {   
-    flex-direction: column;
-  }
-}
-
-* {
+  padding: 0;
   box-sizing: border-box;
 }
 
-/* Container for flexboxes */
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Create four equal columns */
-.column {
-  flex: 25%;
-  padding: 20px;
-}
-
-/* On screens that are 992px wide or less, go from four columns to two columns */
-@media screen and (max-width: 992px) {
-  .column {
-    flex: 50%;
+*,
+*::before,
+*::after  {
+    box-sizing: border-box;
   }
-}
 
 body {
-  background-color: #384047;
-}
-
-.wrapper {
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content:center;
-  background-color: #e53935;
-}
-
-nav {
-  display: flex;
-  width: 90%;
-}
-
-ul li a {
-  margin-left: 1.5em;
-}
-
-a.logo {
-  margin-right: auto;
-}
-
-ul {
-  display: flex;
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
+  font-family: cursive;
 }
 
 a {
   text-decoration: none;
-  color: #ffffff;
-  position: relative;
-  font-size: 1.25em;
 }
 
-a::after {
-  content:"";
-  top: 80%;
-  border-bottom: 2px solid #F8E71C;
-  transition: all 0.35s;
-  position: absolute;
+li {
+  list-style: none;
 }
 
-a:hover::after {
-  transition: all 0.35s;
-}
-
-a::after {
-  right: 50%;
-  left: 50%;
-}
-
-a:hover::after {
-  right: 0;
-  left: 0;
-}
-
-@media (max-width: 1024px) {
-  .wrapper {
-    height: auto;
-  }
-  
-  nav {
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  a.logo {
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
-    margin-right: 0px;
-  }
-  
-  ul {
-    width: 100%;
-    margin-bottom: 1em;
-    justify-content: space-between;
-  }
-  
-  ul li a {
-    margin-left: 0px;
-  }
-}
-
-@media (max-width: 768px) {
-  a.logo {
-    margin: 1.5em;
-  }
-  
-  ul {
-    flex-direction: column;
-  }
-  
-  ul li {
-    margin: 0.3em;
-    text-align: center;
-  }
-  
-  ul li a {
-    margin-left: 0px;
-  }
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100% !important;
-}
-
-.mat-icon {
-  vertical-align: middle;
-}
-.bg-image {
-  /* The image used */
-  background-image: url("../../assets/img/food1.jpg");
-  
-  /* Add the blur effect */
-  filter: blur(3px);
-  -webkit-filter: blur(3px);
-  
-  /* Full height */
-  height: 100%; 
-  
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* Position text in the middle of the page/image */
-.bg-text {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.8); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  // z-index: 2;
-  width: 55%;
+/* NAVBAR STYLING STARTS */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 20px;
-  text-align: center;
+  background-color: #AB3B61;
+  color: #fff;
+}
+
+.nav-links a {
+  color: #fff;
+}
+
+.nav-links a:hover {
+  color: #5B1F33;
+}
+
+/* LOGO */
+.logo {
+  font-size: 32px;
+  padding-left: 20px;
+}
+
+.logo:hover {
+  color: #EFD1DB;
+}
+
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+
+.menu li:hover {
+  background-color: #EBD5CA;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.menu li {
+  padding: 5px 14px;
+}
+
+/* RESPONSIVE NAVBAR MENU STARTS */
+
+/* CHECKBOX HACK */
+
+input[type=checkbox] {
+  display: none;
+} 
+
+/* HAMBURGER MENU */
+.hamburger {
+  display: none;
+  font-size: 24px;
+  user-select: none;
+}
+
+/* APPLYING MEDIA QUERIES */
+@media (max-width: 768px) {
+ .menu {
+    display:none;
+    position: absolute;
+    background-color:teal;
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 16px 0;
+  }
+
+  .menu li:hover {
+    display: inline-block;
+    background-color:#EBD5CA;
+    transition: 0.3s ease;
+  }
+
+  .menu li + li {
+    margin-top: 12px;
+  }
+
+  input[type=checkbox]:checked ~ .menu {
+    display: block;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .dropdown {
+    left: 50%;
+    top: 30px;
+    transform: translateX(35%);
+  }
+
+  .dropdown li:hover {
+    background-color: #4c9e9e;
+  }
+}
+
+.footer-basic {
+  padding:40px 0;
+  background-color:#AB3B61;
+}
+
+.footer-basic ul {
+  padding:0;
+  list-style:none;
+  text-align:center;
+  font-size:18px;
+  line-height:1.6;
+  margin-bottom:0;
+}
+
+.footer-basic li {
+  padding:0 10px;
+}
+
+.footer-basic ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+  color:#FFFFFF;
+}
+
+.footer-basic ul a:hover {
+  opacity:1;
+}
+
+.footer-basic .social {
+  text-align:center;
+  padding-bottom:25px;
+}
+
+.footer-basic .social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin:0 8px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-basic .social > a:hover {
+  opacity:0.9;
+}
+
+.footer-basic .copyright {
+  margin-top:15px;
+  text-align:center;
+  font-size:13px;
+  color:#FFFFFF;
+  margin-bottom:0;
+}
+
+/* btn in nav bar x jdi :( */
+
+.btn-nav {
+  padding: 5px 14px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-nav {
+  background-color: #6A243C;
+  color: #fff;
+  font-size: 18px;
+}
+
+.btn-nav:hover {
+  background-color: #EBD5CA;
+  color: #5B1F33;
+  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.3);
+  filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.3));
+  transition: 0.7s;
+}
+
+.btn-nav-grad {
+  padding: 5px 14px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: rgb(203,145,159);
+  background: radial-gradient(circle, rgba(203,145,159,1) 0%, rgba(171,59,97,1) 100%);
+}
+
+.btn-nav-grad:hover {
+  background: rgb(203,145,159);
+background: linear-gradient(257deg, rgba(203,145,159,1) 0%, rgba(193,99,100,1) 100%, rgba(239,209,219,1) 100%, rgba(0,212,255,1) 100%);
+}
+
+
+.section-1 {
+  height: 500px; /* Set the height of each section to fill the viewport */
+  margin: 0;
+  padding: 0;
+  background-color: #EAE7DC;
+  background-image: url('../../assets/img/c2.jpg');
+  background-size: cover; /* Make the background image cover the entire section */
+  background-position: center; /* Position the background image at the center of the section */
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.4);
+}
+
+.section-2 {
+  height: 700px; /* Set the height of each section to fill the viewport */
+  margin: 0;
+  padding: 0;
+  background-color: #EBDED3;
+}
+
+.section-3 {
+  height: 700px; /* Set the height of each section to fill the viewport */
+  margin: 0;
+  padding: 0;
+  background-color: #EAE7DC;
+}
+
+.logo-image{
+  padding-right: 10px;
 }
