--- a/frontend/src/assets/styles/style.scss
+++ b/frontend/src/assets/styles/style.scss
@@ -17,7 +17,8 @@ File: scss
  *	8. Custom Templates
  */
 
-@import 'variable';
+//@import 'variable';
+@import 'src/theme';
 
 @import 'spinner';
 @import 'app';
