--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// Import Bootstrap CSS
+//@import '~bootstrap/dist/css/bootstrap.min.css';
+
+html, body { 
+  height: 100%; 
+}
+
+body { 
+  margin: 0; 
+  font-family: Roboto,"Helvetica Neue", sans-serif; 
+  background-color: #EAE7DC;
+}
 
   //responsibe table
   @media(max-width: 800px) {
