--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -14,9 +14,9 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2 class="title ">Total Category:</h2>
+                    <h2 class="title">Total Category:</h2>
                     <h1 class="title">{{data?.Category}}</h1>
-                    <p class=""><button class="button"[routerlink]="['/cafe/category']">View Category</button></p>
+                    <p><button class="button" [routerLink]="['/cafe/category']">View Category</button></p>
                 
                 </div>
             </div>
@@ -25,9 +25,9 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2 class="title ">Total Product:</h2>
+                    <h2 class="title">Total Product:</h2>
                     <h1 class="title">{{data?.Product}}</h1>
-                    <p class=""><button class="button"[routerlink]="['/cafe/product']">View Product</button></p>
+                    <p><button class="button" [routerLink]="['/cafe/product']">View Product</button></p>
                 
                 </div>
             </div>
@@ -36,9 +36,9 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2 class="title ">Total Bill:</h2>
+                    <h2 class="title">Total Bill:</h2>
                     <h1 class="title">{{data?.Bill}}</h1>
-                    <p class=""><button class="button"[routerlink]="['/cafe/bill']">View Bill</button></p>
+                    <p><button class="button" [routerLink]="['/cafe/bill']">View Bill</button></p>
                 
                 </div>
             </div>
