--- a/frontend/src/app/layouts/full/header/header.component.html
+++ b/frontend/src/app/layouts/full/header/header.component.html
@@ -5,7 +5,8 @@
     <button mat-menu-item (click)="changePassword()">
         <mat-icon>password</mat-icon>Change Password
     </button>
-    <button mat-menu-item (click)="logout()">
-        <mat-icon>exit_to_app</mat-icon> sign out
+    <button mat-menu-item (click)="changePassword()">
+        <mat-icon>password</mat-icon>Change Password
     </button>
+    
 </mat-menu>
