--- a/frontend/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/frontend/src/app/layouts/full/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list appAccordion>
-    <nav-list-item appAccordionLink *ngFor="let menuitem of menuItems.getMenuitem()" routerLinkActive = "selected" group="{{menuitem.state}}">
+    <nav-list-item appAccordionLink *ngFor="let menuitem of menuItems.getmenuitem()" routerLinkActive = "selected" group="{{menuitem.state}}">
 <a appAccordionToggle [routerLink]="['/cafe',menuitem.state]"*ngIf="(menuitem.role ===''||menuitem.role=== tokenPayload.role)">
     <mat-icon>{{menuitem.icon}}</mat-icon>
     <span>{{menuitem.name}}</span>
