--- a/frontend/src/app/material-component/dialog/change-password/change-password.component.html
+++ b/frontend/src/app/material-component/dialog/change-password/change-password.component.html
@@ -4,13 +4,13 @@
     </mat-toolbar-row>
 </mat-toolbar>
 <mat-dialog-content>
-    <form [formGroup]="changPasswordForm">
+    <form [formGroup]="changePasswordForm">
         <div fxFlex fxLayout="column">
             <mat-form-field appearance="fill" fxFlex>
                 <mat-label>Old Password</mat-label>
                 <input matInput formControlName="oldPassword" type="password" required>
-                <mat-error *ngIf="changPasswordForm.contols.oldPassword.touched && chanePasswordForm.contols.oldPassword.invalid">
-                    <span *ngIf="changPasswordForm.controls.oldPassword.error.required">This fiels is required</span>
+                <mat-error *ngIf="changePasswordForm.contols.oldPassword.touched && changePasswordForm.contols.oldPassword.invalid">
+                    <span *ngIf="changePasswordForm.controls.oldPassword.error.required">This fiels is required</span>
                 </mat-error>
 
             </mat-form-field>
@@ -18,8 +18,8 @@
             <mat-form-field appearance="fill" fxFlex>
                 <mat-label>New Password</mat-label>
                 <input matInput formControlName="newPassword" type="password" required>
-                <mat-error *ngIf="changPasswordForm.contols.newPassword.touched && chanePasswordForm.contols.newPassword.invalid">
-                    <span *ngIf="changPasswordForm.controls.newPassword.error.required">This fiels is required</span>
+                <mat-error *ngIf="changePasswordForm.contols.newPassword.touched && changePasswordForm.contols.newPassword.invalid">
+                    <span *ngIf="changePasswordForm.controls.newPassword.error.required">This fiels is required</span>
                 </mat-error>
 
             </mat-form-field>
@@ -27,8 +27,8 @@
             <mat-form-field appearance="fill" fxFlex>
                 <mat-label>Confirm Password</mat-label>
                 <input matInput formControlName="confirmPassword" type="password" required>
-                <mat-error *ngIf="changPasswordForm.contols.confirmPassword.touched && chanePasswordForm.contols.confirmPassword.invalid">
-                    <span *ngIf="changPasswordForm.controls.confirmPassword.error.required">This fiels is required</span>
+                <mat-error *ngIf="changePasswordForm.contols.confirmPassword.touched && changePasswordForm.contols.confirmPassword.invalid">
+                    <span *ngIf="changePasswordForm.controls.confirmPassword.error.required">This fiels is required</span>
                 </mat-error>
                 <mat-hint * ngIf="validateSubmit() && !(changePasswordForm.controls.confirmPassword.invalid)">
                     <span>New Password & Confirm Password does not match.</span>
