--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -45,13 +45,15 @@
       <div class="row gx-5 align-items-center justify-content-center">
         <div class="col-lg-8 col-xl-7 col-xxl-6">
           <div class="my-5 text-center text-xl-start">
-            <h1 class="display-5 fw-bolder text-white mb-2">Welcome to College U blm edit</h1>
-            <p class="lead fw-normal text-white-50 mb-4"><br>This is where you can learn with us and embark on a
-              transformative journey.
-              Discover a variety of courses tailored to your interests, passions, and ambitions.<br></p>
-            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-              <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Register Now!</a>
-              <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+            <br><br><br>
+            <h1 class="display-5 fw-bolder text-white mb-2" style="text-align: center">Welcome to College U</h1>
+            <p class="lead fw-normal text-white mb-4" style="text-align: center">
+              <br>This is where you can learn with us and embark on a
+              transformative journey.<br>
+              Register your deisred college now!!<br></p>
+            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+              <a class="btn btn-primary btn-lg" (click)="signupAction()" style="align-items: center;">Register Now!</a>
+              <a class="btn btn-outline-light btn-lg " href="#features">Learn More</a>
             </div>
           </div>
         </div>
@@ -61,17 +63,56 @@
 
 
 
-  <section class="section-2">
+  <section class="section-3 py-5" id="learn">
+    <div class="container px-5 my-5">
+      <div class="row gx-5">
 
+          <div class="col-lg-4 mb-5 mb-lg-0">
+              <h2 class="fw-bolder mb-0" style="color: #AB3B61; text-align: center" >Take control of your future and embark on <br> an extraordinary educational journey.</h2>
+              <br><br>
+          </div>
+
+          <div class="col-lg-8">
+              <div class="row gx-5 row-cols-1 row-cols-md-2">
+                  <div class="col mb-5 h-100">
+                      <div class="cardm card-1">
+                          <h3>Courses Offered</h3>
+                          <p>Unlock your potential with our captivating courses designed to ignite your passion for learning. 
+                          Your journey starts here!</p>
+                      </div>
+                  </div>
+                  <div class="col mb-5 h-100">
+                      <div class="cardm card-2">
+                          <h3>Our Facilities</h3>
+                          <p>Wide range of amenities and resources,creating an optimal environment for growth and learning.</p>
+                      </div>
+                  </div>
+
+                  <div class="col mb-5 h-100">
+                      <div class="cardm card-3">
+                        <h3>Testimonial</h3>
+                        <p>Step into the world of inspiration and success with captivating testimonials 
+                          from our esteemed alumni and passionate students.</p>
+                      </div>
+                    </div>
+
+                  <div class="col mb-5 mb-md-0 h-100">
+                      <div class="cardm card-1">
+                          <h3>Campus Tour</h3>
+                          <p>Embark on an immersive virtual journey and explore our captivating 
+                          campus through an exclusive sneak peek tour.</p>
+                      </div>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+  </div>
   </section>
 
-  <section class="section-3">
+  <!--<section class="section-2">
 
-  </section>
-
-  <section class="section-2">
-
-  </section>
+  </section> -->
 
 </div>
 
