--- a/frontend/src/app/layouts/full/full.component.html
+++ b/frontend/src/app/layouts/full/full.component.html
@@ -1,17 +1,21 @@
 <div class="main-container">
     <mat-toolbar color="primary" class="topbar telative">
         <div class="navbar-header">
+
             <button mat-icon-button (click)="snav.toggle()" value="sidebarclosed" style="vertical-align: bottom;">
                 <mat-icon>menu</mat-icon>
-            </button><b>
-                <span style="vertical-align: middle;">
-                    <mat-icon>storefront</mat-icon>
-                </span>
-            </b>
+            </button>
+
+            <img class="logo-image" src="assets/logo.png" alt="Logo">
+
             <span fxShow="false" fxShow.gt-xs>
-                Cafe Management System
+                College U Management System
             </span>
+
         </div>
+
+        <span fxFlex></span>
+
         <span fxFlex></span>
         <app-header></app-header>
     </mat-toolbar>
