--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -61,7 +61,7 @@ body {
     display: inline-block;
     padding: 8px;
     color: white;
-    background-color: #e53935;
+    background-color: #9a2d4f;
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -69,7 +69,7 @@ body {
   }
   
   .button:hover {
-    background-color: #555;
+    background-color: #ab3b61;
   }
   
   @media screen and (max-width: 650px) {
