--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -14,9 +14,9 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2 class="title">Total Category:</h2>
-                    <h1 class="title">{{data?.Category}}</h1>
-                    <p><button class="button" [routerLink]="['/cafe/category']">View Category</button></p>
+                    <h2 class="title">Total College:</h2>
+                    <h1 class="title">{{data?.category}}</h1>
+                    <p><button class="button" [routerLink]="['/cafe/category']">View College</button></p>
                 
                 </div>
             </div>
@@ -25,8 +25,8 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2 class="title">Total Product:</h2>
-                    <h1 class="title">{{data?.Product}}</h1>
+                    <h2 class="title">Total Room:</h2>
+                    <h1 class="title">{{data?.room}}</h1>
                     <p><button class="button" [routerLink]="['/cafe/product']">View Product</button></p>
                 
                 </div>
@@ -36,9 +36,9 @@
         <div class="column">
             <div class="card">
                 <div class="container">
-                    <h2 class="title">Total Bill:</h2>
-                    <h1 class="title">{{data?.Bill}}</h1>
-                    <p><button class="button" [routerLink]="['/cafe/bill']">View Bill</button></p>
+                    <h2 class="title">Total Booking:</h2>
+                    <h1 class="title">{{data?.bill}}</h1>
+                    <p><button class="button" [routerLink]="['/cafe/bill']">View Booking</button></p>
                 
                 </div>
             </div>
