--- a/frontend/src/app/material-component/manage-order/manage-order.component.html
+++ b/frontend/src/app/material-component/manage-order/manage-order.component.html
@@ -1,48 +1,56 @@
 <mat-card>
     <b><span>Manage Order</span></b>
-    <button mat-flat-button color="primary" class="float-right" [disabled]="validateSubmit()" (click)="submitAction()"> Submit & Get Bill </button>
+    <button mat-flat-button color="primary" class="float-right" [disabled]="validateSubmit()" (click)="submitAction()">
+        Submit & Get Bill </button>
 </mat-card>
 <hr>
 <mat-card>
-   <b><span>Customer Details:</span>
+    <b><span>Customer Details:</span></b>
     <form [formGroup]="manageOrderForm">
         <div fxFlex fxLayout="column">
             <div fxLayout="row wrap">
                 <mat-form-field appearance="fill" fxFlex>
-                    <mat-lable>Name</mat-lable>
+                    <mat-label>Name</mat-label>
                     <input matInput formControlName="name" required>
                     <mat-error *ngIf="manageOrderForm.controls.name.touched && manageOrderForm.controls.name.invalid">
-                        <span *ngIf="manageOrderForm.controls.name.error.required">This field is mandatory.</span>
-                        <span *ngIf="manageOrderForm.controls.name.error.pattern">This field is invalid.</span>
+                        <span *ngIf="manageOrderForm.controls.name.errors.required">This field is mandatory.</span>
+                        <span *ngIf="manageOrderForm.controls.name.errors.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="fill" fxFlex>
-                    <mat-lable>Email</mat-lable>
+                    <mat-label>Email</mat-label>
                     <input matInput formControlName="email" required>
                     <mat-error *ngIf="manageOrderForm.controls.email.touched && manageOrderForm.controls.email.invalid">
-                        <span *ngIf="manageOrderForm.controls.email.error.required">This field is mandatory.</span>
-                        <span *ngIf="manageOrderForm.controls.email.error.pattern">This field is invalid.</span>
+                        <span *ngIf="manageOrderForm.controls.email.errors.required">This field is mandatory.</span>
+                        <span *ngIf="manageOrderForm.controls.email.errors.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="fill" fxFlex>
-                    <mat-lable>Contact Number</mat-lable>
+                    <mat-label>Contact Number</mat-label>
                     <input matInput formControlName="contactNumber" required>
-                    <mat-error *ngIf="manageOrderForm.controls.contactNumber.touched && manageOrderForm.controls.contactNumber.invalid">
-                        <span *ngIf="manageOrderForm.controls.contactNumber.error.required">This field is mandatory.</span>
-                        <span *ngIf="manageOrderForm.controls.contactNumber.error.pattern">This field is invalid.</span>
+                    <mat-error
+                        *ngIf="manageOrderForm.controls.contactNumber.touched && manageOrderForm.controls.contactNumber.invalid">
+                        <span *ngIf="manageOrderForm.controls.contactNumber.errors.required">This field is
+                            mandatory.</span>
+                        <span *ngIf="manageOrderForm.controls.contactNumber.errors.pattern">This field is
+                            invalid.</span>
                     </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="fill" fxFlex>
-                    <mat-lable>Payment Method</mat-lable>
+                    <mat-label>Payment Method</mat-label>
                     <mat-select matInput formControlName="paymentMethod" required>
                         <mat-option value="Cash">Cash</mat-option>
                         <mat-option value="Credit Card">Credit Card</mat-option>
                         <mat-option value="Debit Card">Debit Card</mat-option>
-                    <mat-error *ngIf="manageOrderForm.controls.paymentMethod.touched && manageOrderForm.controls.paymentMethod.invalid">
-                        <span *ngIf="manageOrderForm.controls.paymentMethod.error.required">This field is mandatory.</span>
-                        <span *ngIf="manageOrderForm.controls.paymentMethod.error.pattern">This field is invalid.</span>
-                    </mat-error>
                     </mat-select>
+                    <mat-error
+                        *ngIf="manageOrderForm.controls.paymentMethod.touched && manageOrderForm.controls.paymentMethod.invalid">
+                        <span *ngIf="manageOrderForm.controls.paymentMethod.errors.required">This field is
+                            mandatory.</span>
+                        <span *ngIf="manageOrderForm.controls.paymentMethod.errors.pattern">This field is
+                            invalid.</span>
+                    </mat-error>
+
                 </mat-form-field>
             </div>
         </div>
@@ -51,35 +59,36 @@
 
 <hr>
 <mat-card>
-<b><span>Select Product:</span></b>
-<form [formGroup]="manageOrderForm">
-    <div fxFlex fxLayout="column">
-        <div fxLayout="row wrap">
-            <mat-form-field appearance="fill" fxFlex>
-                <mat-label>Category</mat-label>
-                <mat-select formControlName="category" (selectionChange)="getProductByCategory($event.value)">
-                    <mat-option *ngFor="let category of categorys" [value]="category">{{category.name}}</mat-option>
-                </mat-select>
+    <b><span>Select Product:</span></b>
+    <form [formGroup]="manageOrderForm">
+        <div fxFlex fxLayout="column">
+            <div fxLayout="row wrap">
+                <mat-form-field appearance="fill" fxFlex>
+                    <mat-label>Category</mat-label>
+                    <mat-select formControlName="category" (selectionChange)="getProductByCategory($event.value)">
+                        <mat-option *ngFor="let category of categorys" [value]="category">{{category.name}}</mat-option>
+                    </mat-select>
 
-            </mat-form-field>
-             <mat-form-field appearance="fill" fxFlex>
-                <mat-label>Product</mat-label>
-                <mat-select formControlName="product" (selectionChange)="getProductDetails($event.value)">
-                    <mat-option *ngFor="let product of products" [value]="product">{{product.name}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-             <mat-form-field appearance="fill" fxFlex>
+                </mat-form-field>
+                <mat-form-field appearance="fill" fxFlex>
+                    <mat-label>Product</mat-label>
+                    <mat-select formControlName="product" (selectionChange)="getProductDetails($event.value)">
+                        <mat-option *ngFor="let product of products" [value]="product">{{product.name}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Price</mat-label>
                     <input matInput formControlName="price" required readonly>
                     <mat-error *ngIf="manageOrderForm.controls.price.touched && manageOrderForm.controls.price.invalid">
                         <span *ngIf="manageOrderForm.controls.price.error.required">This field is mandatory.</span>
                         <span *ngIf="manageOrderForm.controls.price.error.pattern">This field is invalid.</span>
                     </mat-error>
-            </mat-form-field>
+                </mat-form-field>
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Quantity</mat-label>
                     <input matInput formControlName="quantity" required (keyup)="setQuantity($event)" #input>
-                    <mat-error *ngIf="manageOrderForm.controls.quantity.touched && manageOrderForm.controls.quantity.invalid">
+                    <mat-error
+                        *ngIf="manageOrderForm.controls.quantity.touched && manageOrderForm.controls.quantity.invalid">
                         <span *ngIf="manageOrderForm.controls.quantity.error.required">This field is mandatory.</span>
                         <span *ngIf="manageOrderForm.controls.quantity.error.pattern">This field is invalid.</span>
                     </mat-error>
@@ -92,10 +101,10 @@
                         <span *ngIf="manageOrderForm.controls.total.error.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
-        </div>
+            </div>
 
-    </div>
-</form>
+        </div>
+    </form>
 </mat-card>
 <div>
     <button mat-flat-button color="primary" [disabled]="validateProductAdd()" (click)="add()">Add</button>
