--- a/frontend/src/app/material-component/view-bill/view-bill.component.html
+++ b/frontend/src/app/material-component/view-bill/view-bill.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <b><span>View Bill</span></b>
+    <b><span>View Booking</span></b>
 </mat-card>
 <hr>
 <mat-card>
@@ -34,7 +34,7 @@
         <ng-container matColumnDef="view">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element" class="action-link">
-                <button mat-icon-button color="primary" matTooltip="View" (click)="handleviewAction(element)">
+                <button mat-icon-button color="primary" matTooltip="View" (click)="handleViewAction(element)">
                     <mat-icon>visibility</mat-icon>
                 </button>
                 <button mat-icon-button color="primary" matTooltip="Download Bill" (click)="downloadReportAction(element)">
