--- a/frontend/src/app/material-component/manage-order/manage-order.component.html
+++ b/frontend/src/app/material-component/manage-order/manage-order.component.html
@@ -1,14 +1,17 @@
 <mat-card>
-    <b><span>Manage Order</span></b>
+    <b><span>Manage Booking</span></b>
     <button mat-flat-button color="primary" class="float-right" [disabled]="validateSubmit()" (click)="submitAction()">
         Submit & Get Bill </button>
 </mat-card>
+
 <hr>
+
 <mat-card>
     <b><span>Customer Details:</span></b>
     <form [formGroup]="manageOrderForm">
         <div fxFlex fxLayout="column">
             <div fxLayout="row wrap">
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Name</mat-label>
                     <input matInput formControlName="name" required>
@@ -17,6 +20,7 @@
                         <span *ngIf="manageOrderForm.controls.name.errors.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Email</mat-label>
                     <input matInput formControlName="email" required>
@@ -25,6 +29,7 @@
                         <span *ngIf="manageOrderForm.controls.email.errors.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Contact Number</mat-label>
                     <input matInput formControlName="contactNumber" required>
@@ -36,6 +41,7 @@
                             invalid.</span>
                     </mat-error>
                 </mat-form-field>
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Payment Method</mat-label>
                     <mat-select matInput formControlName="paymentMethod" required>
@@ -43,6 +49,7 @@
                         <mat-option value="Credit Card">Credit Card</mat-option>
                         <mat-option value="Debit Card">Debit Card</mat-option>
                     </mat-select>
+
                     <mat-error
                         *ngIf="manageOrderForm.controls.paymentMethod.touched && manageOrderForm.controls.paymentMethod.invalid">
                         <span *ngIf="manageOrderForm.controls.paymentMethod.errors.required">This field is
@@ -50,19 +57,21 @@
                         <span *ngIf="manageOrderForm.controls.paymentMethod.errors.pattern">This field is
                             invalid.</span>
                     </mat-error>
-
                 </mat-form-field>
+
             </div>
         </div>
     </form>
 </mat-card>
 
 <hr>
+
 <mat-card>
     <b><span>Select Product:</span></b>
     <form [formGroup]="manageOrderForm">
         <div fxFlex fxLayout="column">
             <div fxLayout="row wrap">
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Category</mat-label>
                     <mat-select formControlName="category" (selectionChange)="getProductByCategory($event.value)">
@@ -70,12 +79,14 @@
                     </mat-select>
 
                 </mat-form-field>
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Product</mat-label>
                     <mat-select formControlName="product" (selectionChange)="getProductDetails($event.value)">
                         <mat-option *ngFor="let product of products" [value]="product">{{product.name}}</mat-option>
                     </mat-select>
                 </mat-form-field>
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Price</mat-label>
                     <input matInput formControlName="price" required readonly>
@@ -84,6 +95,7 @@
                         <span *ngIf="manageOrderForm.controls.price.error.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Quantity</mat-label>
                     <input matInput formControlName="quantity" required (keyup)="setQuantity($event)" #input>
@@ -93,6 +105,7 @@
                         <span *ngIf="manageOrderForm.controls.quantity.error.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
+
                 <mat-form-field appearance="fill" fxFlex>
                     <mat-label>Total</mat-label>
                     <input matInput formControlName="total" required readonly>
@@ -101,41 +114,50 @@
                         <span *ngIf="manageOrderForm.controls.total.error.pattern">This field is invalid.</span>
                     </mat-error>
                 </mat-form-field>
+
             </div>
 
         </div>
     </form>
 </mat-card>
+
 <div>
     <button mat-flat-button color="primary" [disabled]="validateProductAdd()" (click)="add()">Add</button>
     <button mat-flat-button color="primary" class="float-right">Total Amount: {{totalAmount}}</button>
 </div>
+
 <hr>
+
 <div class="responsive_table">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let element">{{element.name}}</td>
         </ng-container>
+
         <ng-container matColumnDef="category">
             <th mat-header-cell *matHeaderCellDef>Category</th>
             <td mat-cell *matCellDef="let element">{{element.category}}</td>
         </ng-container>
+
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Price</th>
             <td mat-cell *matCellDef="let element">{{element.price}}</td>
         </ng-container>
+
         <ng-container matColumnDef="quantity">
             <th mat-header-cell *matHeaderCellDef>Quantity</th>
             <td mat-cell *matCellDef="let element">{{element.quantity}}</td>
         </ng-container>
+
         <ng-container matColumnDef="total">
             <th mat-header-cell *matHeaderCellDef>Total</th>
             <td mat-cell *matCellDef="let element">{{element.total}}</td>
         </ng-container>
+
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef>Delete</th>
-            <td mat-cell *matCellDef="Let element;let i = index" class="action-link">
+            <td mat-cell *matCellDef="let element;let i = index" class="action-link">
                 <button mat-icon-button color="primary" matTooltip="Delete" (click)="handleDeleteAction(i,element)">
                     <mat-icon>delete</mat-icon>
                 </button>
@@ -143,6 +165,6 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
-        <tr mat-row *matRowDef="let row; columns:displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns:displayedColumns;"></tr>
     </table>
 </div>
