--- a/frontend/src/app/material-component/manage-product/manage-product.component.html
+++ b/frontend/src/app/material-component/manage-product/manage-product.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <b><span>Manage Product</span></b>
+    <b><span>Manage Room</span></b>
     <button mat-flat-button color="primary" class="float-right" (click)="handleAddAction()">Add Product</button>
 </mat-card>
 <hr>
@@ -14,27 +14,27 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="Let element">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
         </ng-container>
 
         <ng-container matColumnDef="categoryName">
             <th mat-header-cell *matHeaderCellDef>Category</th>
-            <td mat-cell *matCellDef="Let element">{{element.roomName}}</td>
+            <td mat-cell *matCellDef="let element">{{element.categoryName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef>Description</th>
-            <td mat-cell *matCellDef="Let element">{{element.description}}</td>
+            <td mat-cell *matCellDef="let element">{{element.description}}</td>
         </ng-container>
 
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Price</th>
-            <td mat-cell *matCellDef="Let element">{{element.price}}</td>
+            <td mat-cell *matCellDef="let element">{{element.price}}</td>
         </ng-container>
 
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef>Action</th>
-            <td mat-cell *matCellDef="Let element" class="action-link">
+            <td mat-cell *matCellDef="let element" class="action-link">
                 <button mat-icon-button color="primary" matTooltip="Edit" (click)="handleEditAction(element)">
                     <mat-icon>edit</mat-icon>
                 </button>
