--- a/frontend/src/app/material-component/manage-user/manage-user.component.html
+++ b/frontend/src/app/material-component/manage-user/manage-user.component.html
@@ -31,7 +31,7 @@
             </td>
         </ng-container>
         <tr mat-row *matHeaderRowDef="displayedColumns;sticky:true"></tr>
-        <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row;columns:displayedColumns;"></tr>
         
     </table>
 </div>
