--- a/frontend/src/app/material-component/manage-user/manage-user.component.html
+++ b/frontend/src/app/material-component/manage-user/manage-user.component.html
@@ -27,7 +27,8 @@
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element" class="action-link">
                 <mat-slide-toggle (change)="handleChangeAction($event.checked,element.id)" 
-                matToolTip="Activate or Deactive USer" [checked]="element.status"></mat-slide-toggle>
+                matToolTip="Activate or Deactive USer" [checked]="element.status">
+            </mat-slide-toggle>
             </td>
         </ng-container>
         <tr mat-row *matHeaderRowDef="displayedColumns;sticky:true"></tr>
